--- a/src/assets/templates/.eternal/css/_default.scss
+++ b/src/assets/templates/.eternal/css/_default.scss
@@ -1,40 +1,63 @@
-html {
-  font-family: $fontFamily;
+ 
+@mixin font {
+  font-family: $font-family;
+  color: $font-color-dark;
+  font-size: small ;
 }
 
-body, .modal {
-  font-family: $fontFamily;
+html {
+  @include font();
+  overflow: auto;
   scrollbar-width: 1em;
-  scrollbar-color: $Color1 $Card;
+  scrollbar-color: $color-primary $card-bg;
   &::-webkit-scrollbar {
     width: 11px;
   }
   &::-webkit-scrollbar-track {
-    background: $Card;
+    background: $card-bg;
   }
   &::-webkit-scrollbar-thumb {
-    background-color: $Color1;
+    background-color: $color-primary;
     border-radius: 6px;
-    border: 3px solid $Card;
+    border: 3px solid $card-bg;
   }
 }
 
+body {
+  @include font();
+  background-color: $body-bg;
+  margin: 0em;
+  overflow: auto;
+  background-attachment: fixed;
+}
 
+a {
+  color: $font-color-primary;
+  transition-duration: 0.4s;
+  padding: 0.2em 0.5em;
+  border-radius: 0.2em;
+  &:hover {
+    text-decoration: none;
+    background-color: $color-primary;
+    color: $font-color-light;
+    box-shadow: 0 12px 16px 0 rgba(0, 0, 0, 0.24), 0 17px 50px 0 rgba(0, 0, 0, 0.19);
+  }
+}
 
 h1 {
-  font-size: 1.8em;
+  font-size: 1.9em;
 }
 
 h2 {
-  font-size: 1.5em;
+  font-size: 1.7em;
 }
 
 h3 {
-  font-size: 1.4em;
+  font-size: 1.6em;
 }
 
 h4 {
-  font-size: 1.3em;
+  font-size: 1.4em;
 }
 
 h5 {
@@ -42,10 +65,9 @@ h5 {
 }
 
 h6 {
-  font-size: 1.3em;
+  font-size: 1.2em;
 }
+
 hr {
   margin: 0em 0em 0.5em 0em !important;
 }
-
-
