--- a/src/assets/templates/.eternal/css/style.scss
+++ b/src/assets/templates/.eternal/css/style.scss
@@ -1,49 +1,60 @@
-// Variables 
-$fontFamily: 'Helvetica';
-$FontColor1: #3a3a3a;
-$FontColor2: whitesmoke;
-$FontColor3: #666;
-$FontShadow: #212121;
-$Color1: #0d6efd;
-$Color2: #6cfb92;
-$Color1Dark: #0e59ca;
-$BG: #E7E7E2;
-$BG2: #F7F7F7;
-$BG3: #d1d1cd;
-$Card: #FFFFFF;
-$ToolTipBG: #eb4034;
-$ToolTipColor: #ffffff;
-$BorderColor: #ced4da;
+// ======== VARIABLE AREA ========
+$body-bg: #E7E7E2;
+$card-bg: white;
+$color-primary: #0d6efd;
+$color-error: #e82b2b;
+$color-light: #E7E7E2;
+$color-light2: #F7F7F7;
+$font-color-primary: $color-primary;
+$font-color-light: #fff;
+$font-color-dark: #2b2b2b;
+$font-family: 'Rubik Regular';
+$outline: lighten($color-primary, 30);
 
+// Button Variables
+$btn-primary: $color-primary;
+$btn-primary--darken: 15%;
+$btn-primary--font: $font-color-light;
 
-$notifySuccess: #21be4b;
-$notifyError: #eb4034;
+// Header Variables
+$header-font: $font-family;
 
-// Imports         
-@import './bootstrap.min';
-@import './navbar';
-@import './spoiler';
-@import './default';
-@import './toc';
-@import './profilebox';
-@import './editor';
-@import './notifications';
+// BreadCrumb Variables
+$breadcrumbs-bg: $color-light2;
+$breadcrumbs-font-color: $font-color-dark;
+
+// TOC
+$toc-bg: $color-light2;
+
+// ======== VARIABLE AREA ======== (DO NOT REMOVE THIS COMMENT)
+
+// External Import
+@import './boostrap/bootstrap-reboot';
+@import './boostrap/bootstrap-grid';
+@import './editor/easymde';
+@import './editor/jsoneditor'; 
+
+// Imports 
+@import './font/font';
+@import './buttons';
 @import './utility';
-@import './easymde.min';
-@import './jsoneditor';
-@import './loadingscreen';
-@import './collapsible';
+@import './default';
+@import './input';
 
-// CSS           
-@mixin center {    
+// Imports Components         
+@import './components/card';
+@import './components/header';
+@import './components/toggle';
+@import './components/breadcrumbs';
+@import './components/toc';
+@import './components/profilebox';
+@import './components/editor';
+ 
+     
+        
+@mixin center-contents {
   display: grid;
   place-items: center;
-}
-
-@mixin removeSelect {
-  outline: 0px !important;
-  -webkit-appearance: none;
-  box-shadow: none !important;
 }
 
 @mixin innerBorder($size, $color) {
@@ -51,139 +62,65 @@ $notifyError: #eb4034;
   -moz-box-shadow: inset 0px 0px 0px $size $color !important;
   box-shadow: inset 0px 0px 0px $size $color !important;
 }
-
-#page-title {
-  h1 {
-    font-size: 2.5em;
-    font-weight: 400;
-  }
-  #page-breadcrumbs {
-    background-color: $BG2;
-    color: $FontColor3;
-    border-radius: 0.3em;
-    margin-bottom: 0.8em;
-    padding: 0.5em 1em;
-    font-size: smaller;
-    display: flex;
-    justify-content: center;
-    align-content: center;
-    flex-direction: column;
-  }
+  
+@mixin font {
+  font-family: $font-family;
+  color: $font-color-dark;
+  font-size: small ;
 } 
 
-#head-card {
-  @include center();
-  margin: 6em 0em 3em 0em;
-  h1 {
-    color: $FontColor1;
-    text-shadow: 1px 1px 2px $FontShadow;
-  }
-  // Website Title  
-  #project-title {
-    text-align: center;
-    font-size: 3.4em;
-  }
-  #nav-card {
-    text-align: center;
-  }
+@mixin outline {
+  outline: 3px solid $outline;
 }
 
-body {
-  // @include center(); 
-  background-color: $BG;
-  color: $FontColor1;
-  font-family: $fontFamily;
-  font-weight: 400;
-  font-size: small;
 
-  .body-card {
-    width: 60em;
-    background-color: $Card;
-    color: $FontColor1;
-    border-radius: 0.5em;
-    padding: 2em 3em;
-    overflow: auto !important;
-  }
-
-  #page-tags {
-    border-top: 1px solid $BG;
-  }
+.card--editor {
+  height: max-content;
+  overflow: auto;   
 }
 
-.page-tab {
-  display: none;
-}
-
-@media (max-width: 1200px) {
-  .modal-card {
-    width: 70% !important;
-  }
-}
-
-@media (max-width: 750px) {
-  .container,
-  .container-sm {
-    max-width: 575px;
-  }
-  .modal-card {
-    width: 100% !important;
-  }
-}
-
-@media (max-width: 575px) {
-  .container,
-  .container-sm {
-    max-width: 500px;
-  }
-  .body-card {
-    padding: 2em 1.5em !important;
-  }
-  .modal-card {
-    width: 90% !important;
-  }
-}
-
-@media (max-width: 350px) {
-  .container,
-  .container-sm {
-    max-width: 300px;
-  }
-  .body-card {
-    padding: 2em 1em !important;
-  }
-  #project-title {
-    font-size: 2.5em !important;
-  }
-  .profile-box {
-    float: none !important;
-    margin: auto;
-  }
-  .profile-box-parent {
-    display: grid !important;
-    place-items: center !important;
-  }
-  #page-title {
-    h1 {
-      font-size: 2em;
-    }
-  }
-  .modal-card {
-    width: 300px !important;
-  }
-}
+#profile-box {
+  padding-bottom: 3em; 
+}  
  
-@media (max-width: 300px) {
-  .container,
-  .container-sm {
-    max-width: 250px;
-  }
-  .body-card {
-    padding: 0em;
-    margin: 0em;
-    width: 100% !important;
-  }
-  #project-title {
-    font-size: 2em !important;
-  }
-}
+#manage-tab {
+  height: auto;
+}  
 
+// Side Button
+.btn-side {
+  margin: 1em;
+  position: fixed;
+  z-index: 99;
+  padding: 0.4em 0.8em;
+  top: 10%;
+  left: 20%;
+}
+    
+@media (min-width: 100px) {
+  .btn-side {
+    top: 0.2em;
+    left: 0.2em;
+  }
+}  
+
+@media (min-width: 300px) {
+  .btn-side {
+    top: 1%;
+    left: 2%;
+  }
+}  
+
+@media (min-width: 700px) {
+  .btn-side {
+    top: 3%;
+    left: 5%;
+  }
+}  
+
+@media (min-width: 1000px) {
+  .btn-side {
+    top: 10%;
+    left: 15%;
+  }
+}  
