--- a/src/assets/templates/.eternal/css/components/_header.scss
+++ b/src/assets/templates/.eternal/css/components/_header.scss
@@ -13,8 +13,6 @@
 
 .btn--header {
   border-radius: 0.1em;
-  font-size: medium;
-  // color: $font-color-dark;
 }
 
 @media screen and (min-width: 100px) {
@@ -81,4 +79,50 @@
   .project-title {
     font-size: 3.5em;
   }
+}
+
+
+
+
+
+
+
+
+
+
+
+.dropdown {
+    position: relative;
+    display: inline-block;
+    &:hover {
+        .dropdown-content {
+            display: block;
+        }
+    }
+}
+
+.dropdown-content {
+    display: none;
+    position: absolute;
+    text-align: left;
+    background-color: #f1f1f1;
+    width: max-content;
+    box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+    z-index: 1;
+    button {
+        display: block;
+        width: 100%;
+        padding: 0.4em;
+        padding-left: 0.8em;
+        padding-right: 0.8em;
+
+        background-color: $color-light2;
+        color: #212121;
+        text-decoration: none;
+        
+        &:hover {
+            background-color: $color-primary;
+            color: $color-light;
+        }
+    }
 }
