--- a/src/assets/templates/.eternal/css/_buttons.scss
+++ b/src/assets/templates/.eternal/css/_buttons.scss
@@ -22,6 +22,23 @@
   border-radius: 0.2em;
 }
 
+.btn-secondary {
+  text-decoration: none;
+  transition-duration: 0.4s;
+  padding: 0.2em 0.2em;
+  border-radius: 0.2em;
+}
+
+.btn--link {
+  color: $font-color-primary;
+  background-color: transparent;
+  &:hover {
+    background-color: $color-primary;
+    color: $font-color-light;
+    box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.24), 0 17px 50px 0 rgba(0, 0, 0, 0.19);
+  }
+}
+
 .btn--color-primary {
   color: $font-color-light;
   background-color: $color-primary;
@@ -33,9 +50,10 @@
 }
 
 .btn--color-secondary {
-  color: $font-color-primary;
+  color: $font-color-dark;
+  background-color: $color-light;
   &:hover {
-    background-color: $color-primary;
+    background-color: lighten($color-primary, 10%);
     color: $font-color-light;
     box-shadow: 0 12px 16px 0 rgba(0, 0, 0, 0.24), 0 17px 50px 0 rgba(0, 0, 0, 0.19);
   }
