--- a/src/assets/templates/assets/new-page.html
+++ b/src/assets/templates/assets/new-page.html
@@ -1,11 +1,11 @@
 <!-- File Data -->
 <script>
   window.pageData = {
-    "title": "Home",
-    "urlName": "home",
-    "parent": "geh",
+    "title": "New Page",
+    "urlName": "new-page",
+    "parent": "",
     "tags": "",
-    "description": "Stuff stuff",
+    "description": "",
     "createSpoilers": false,
     "tabs": {
       "nonspoiler-overview": {
@@ -13,32 +13,26 @@
         "area": "nonspoiler"
       },
       "spoiler-overview": {
-        "name": "Default",
+        "name": "Overview",
         "area": "spoiler"
       }
     },
     "disabledProfileData": [],
-    "urlPath": "content/home.html"
+    "urlPath": "content/nothing.html"
   }
 
-  window.profileData = {
-    "nonspoiler-overview": {}
-  }
+  window.profileData = {}
 </script>
 
 <!-- File Content -->
 
 <div id="spoiler">
   <div id="spoiler-overview" class="page-tab">
-    Spoilers Spoilersadsadsadasds
+
   </div>
 </div>
 <div id="nonspoiler">
   <div id="nonspoiler-overview" class="page-tab">
-    Welcome to the Song of Enderion!
-
-    A Wiki Created for the stories.
-
-    [[ethan morales]]
+    The page "<code>[[pageName]]</code>" is not saved yet!
   </div>
 </div>
