--- a/src/assets/templates/content/story/ethan-morales.html
+++ b/src/assets/templates/content/story/ethan-morales.html
@@ -8,14 +8,6 @@
     "description": "Stuff stuff",
     "createSpoilers": true,
     "tabs": {
-      "nonspoiler-overview": {
-        "name": "Default",
-        "area": "nonspoiler"
-      },
-      "nonspoiler-relationships": {
-        "name": "Relationships",
-        "area": "nonspoiler"
-      },
       "spoiler-overview": {
         "name": "Overview",
         "area": "spoiler"
@@ -23,9 +15,14 @@
       "spoiler-relationships": {
         "name": "Relationship",
         "area": "spoiler"
+      },
+      "nonspoiler-overview": {
+        "name": "Default",
+        "area": "nonspoiler"
       }
     },
-    "disabledProfileData": []
+    "disabledProfileData": [],
+    "urlPath": "content/story/tboah/characters/protagonist/ethan-morales.html"
   }
 
   window.profileData = {
@@ -160,7 +157,7 @@
 
     He grew up having a bright, cheerful, and smart personality. Because Ethan grew up in Desteria during the first six years of his life, his morality ended up getting influenced, causing him to have rebellious and cold tendencies. However, his parents has taught him well enough that Ethan grew up with a kind personality, always smiling and helping those in need.
 
-    After the events with the Crawler, Ethan changed and became sociopathic. He became cold, cunning, hateful, and vengeful. The event broke him, causing him to lose a great deal of his empathy. After much consolation and love from his parents, a part of the Original Ethan returned back, however he was permanently changed. He changed into a mature and unsociable person, barely smiling and always living in his own world. It was only after living with E-Class did Ethan grew and retained his original personality back.
+    After the events with the Crawler, Ethan changed and became sociopathic. He became cold, cunning, hateful, and vengeful. The event broke him, causing him to lose a great deal of his empathy. After much consolation and love from his parents, a part of the Original Ethan returned back, however he was permanently changed. He changed into a mature and unsociable person, barely smiling and always living in his own world. It was only after living with [[E-Class]] did Ethan grew and retained his original personality back.
 
     Inspired by the Elucid King, Ethan started studying Strange Social Laws and Scheming books, causing him to turn into a rather deceptive and highly opportunistic person.
 
@@ -195,21 +192,27 @@
   </div>
   <div id="spoiler-relationships" class="page-tab">
     # Relationships
+    * [[Giselle Iridao]] - Ethan forms a tight sibling relationship with Giselle. They found each other's mind quite comfortable, specially Giselle who always find it hard to understand when people suffer. Seeing as how Ethan is okay with things she finds indifference with, they were able to easily bond and find a common ground.
+
+    * [[Mayumi Severino]] - Ethan also formed a sibling-like relationship with Mayumi, but more of a best-friend type of nature.
+
+    * [[Eltia Axolin]]
   </div>
 </div>
 <div id="nonspoiler">
   <div id="nonspoiler-overview" class="page-tab">
-    Ethan Morales __is__ the Main __**Protagonist**__ of the novel __"The Birth of a Hero"__ and the **the central** point of the story. He is a student studying in U.H.A. and is part of E-Class. He has the power to create physical objects using his body fats which he apparently "Awakened" randomly in the past.
+    Ethan Morales is the Main Protagonist of the novel [[tboah]] and the the central hero of the story. He is a student studying in U.H.A. and is part of E-Class. He has the power to create physical objects using his body fats which he apparently "Awakened" randomly in the past.
 
-    [[nothing]]
+    * [[Giselle Iridao]] - Ethan forms a tight sibling relationship with Giselle. They found each other's mind quite comfortable, specially Giselle who always find it hard to understand when people suffer. Seeing as how Ethan is okay with things she finds indifference with, they were able to easily bond and find a common ground.
 
-    [[ethan morales]]
+    * [[Mayumi Severino]] - Ethan also formed a sibling-like relationship with Mayumi, but more of a best-friend type of nature.
 
-    sadasdasdasdasdasdasd
+    * [[Eltia Axolin]]
+
     [[toc]]
 
     # Appearance
-    Ethan is a Desterian Teenager. Like most Desterian, he has dark hair and light beige skin. *His* eyes are orange-red, inherited from his mother and he has a tall build, inherited from his dad. His eyebrows are thin like his mother and his nose is straight from his father's. His hair is kept slightly long, giving him a pair of bangs on his forehead.
+    Ethan is a Desterian Teenager. Like most Desterian, he has dark hair and light beige skin. His eyes are orange-red, inherited from his mother and he has a tall build, inherited from his dad. His eyebrows are thin like his mother and his nose is straight from his father's. His hair is kept slightly long, giving him a pair of bangs on his forehead.
 
     While Ethan is always seen wearing glasses, he does not have a bad eyesight. Rather, he wears his glasses as a convenient computer and to help enhance his ability. He does not like contact lens since he's too lazy to wear those.
 
@@ -235,8 +238,5 @@
 
     ## Fire Resistance
     Ability to resist intense heat. Inherited from his mother.
-  </div>
-  <div id="nonspoiler-relationships" class="page-tab">
-    Cherkov's Test
   </div>
 </div>
