--- a/src/assets/templates/.eternal/css/_buttons.scss
+++ b/src/assets/templates/.eternal/css/_buttons.scss
@@ -59,6 +59,16 @@
   }
 }
 
+.btn--color-tertiary {
+  color: $font-color-primary;
+  background-color: transparent;
+  &:hover {
+    background-color: lighten($color-primary, 10%);
+    color: $font-color-light;
+    box-shadow: 0 12px 16px 0 rgba(0, 0, 0, 0.24), 0 17px 50px 0 rgba(0, 0, 0, 0.19);
+  }
+}
+
 .btn--color-tab {
   color: $font-color-dark;
   font-weight: bold;
