--- a/src/assets/templates/.eternal/css/style.css
+++ b/src/assets/templates/.eternal/css/style.css
@@ -8295,6 +8295,18 @@ div.jsoneditor-statusbar > .jsoneditor-size-info {
           box-shadow: 0 12px 16px 0 rgba(0, 0, 0, 0.24), 0 17px 50px 0 rgba(0, 0, 0, 0.19);
 }
 
+.btn--color-tertiary {
+  color: #0d6efd;
+  background-color: transparent;
+}
+
+.btn--color-tertiary:hover {
+  background-color: #408cfd;
+  color: #fff;
+  -webkit-box-shadow: 0 12px 16px 0 rgba(0, 0, 0, 0.24), 0 17px 50px 0 rgba(0, 0, 0, 0.19);
+          box-shadow: 0 12px 16px 0 rgba(0, 0, 0, 0.24), 0 17px 50px 0 rgba(0, 0, 0, 0.19);
+}
+
 .btn--color-tab {
   color: #2b2b2b;
   font-weight: bold;
