--- a/src/assets/templates/.eternal/css/components/_card.scss
+++ b/src/assets/templates/.eternal/css/components/_card.scss
@@ -5,8 +5,8 @@
   padding: 2em;
   overflow: auto;
   border-radius: 0.8em;
-  text-align: justify;
-  text-justify: inter-word;
+  // text-align: justify;
+  // text-justify: inter-word;
 }
 
 .card--visual {
