--- a/src/assets/templates/content/home.html
+++ b/src/assets/templates/content/home.html
@@ -40,5 +40,10 @@
     A Wiki Created for the stories.
 
     [[ethan morales]]
+    
+    * **Eldrada** - The most powerful among Eldras.
+    * **Eldrasil** - Second only to an Eldrada. Their only difference is that an Eldrada has a superior control over an aspect of nature.
+    * **Eldram** - Powerful Eldras.
+    * **Ka'Eldra** - Meaning, half-spirit, refers to changed mortals who became a half-eldra due to circumstances, mostly as a result of being chosen by an Eldrada, turning their body into a form much more suitable at handling the gifted power.
   </div>
 </div>
