--- a/src/assets/templates/index.html
+++ b/src/assets/templates/index.html
@@ -33,8 +33,10 @@
       <!-- v-if="isElectronCheck" -->
 
       <!-- Editor -->
-      <div class="row editor-div">
-        <editor :passed-editor-data="editorData" @save-content="saveContent" @delete-page="deletePage" @update-project="updateProject" @new-page="newPage"/>
+      <div class="row editor-div" v-if="isElectronCheck">
+        <editor :passed-editor-data="editorData" @save-content="saveContent"
+          @delete-page="deletePage" @update-project="updateProject" 
+          @new-page="newPage" @history-previous='historyPrevious'/>
       </div>
 
       <!-- Page Card -->
