refactored shitty urlpath code separated urlpath into urlpath and urlname

--- a/src/assets/templates/assets/new-page.html
+++ b/src/assets/templates/assets/new-page.html
@@ -18,7 +18,7 @@
       }
     },
     "disabledProfileData": [],
-    "urlPath": "content/nothing.html"
+    "urlPath": "content/"
   }
 
   window.profileData = {}
