--- a/src/assets/templates/assets/templates/character-template.html
+++ b/src/assets/templates/assets/templates/character-template.html
@@ -2,8 +2,8 @@
 <script>
   window.pageData = {
     "title": "Character",
-    "urlName": "ethan-morales",
-    "parent": "tboah-characters",
+    "urlName": "character-template",
+    "parent": "",
     "tags": "",
     "description": "Stuff stuff",
     "createSpoilers": true,
@@ -18,7 +18,7 @@
       }
     },
     "disabledProfileData": [],
-    "urlPath": "content/story/tboah/characters/protagonist/ethan-morales.html"
+    "urlPath": "content/"
   }
 
   window.profileData = {
