--- a/src/assets/templates/content/nothing.html
+++ b/src/assets/templates/content/nothing.html
@@ -3,7 +3,7 @@
   window.pageData = {
     "title": "Nothing",
     "urlName": "nothing",
-    "parent": "ethan-morales",
+    "parent": "",
     "tags": "Test test",
     "description": "",
     "createSpoilers": false,
@@ -18,7 +18,7 @@
       }
     },
     "disabledProfileData": [],
-    "urlPath": "content/nothing.html"
+    "urlPath": "content/"
   }
 
   window.profileData = {}
