--- a/src/assets/templates/content/story/ethan-morales.html
+++ b/src/assets/templates/content/story/ethan-morales.html
@@ -22,7 +22,7 @@
       }
     },
     "disabledProfileData": [],
-    "urlPath": "content/story/tboah/characters/protagonist/ethan-morales.html"
+    "urlPath": "content/story/tboah/characters/protagonist/"
   }
 
   window.profileData = {
