--- a/src/assets/templates/content/test/new-page-AJbec.html
+++ b/src/assets/templates/content/test/new-page-AJbec.html
@@ -1,8 +1,8 @@
 <!-- File Data -->
 <script>
   window.pageData = {
-    "title": "Page not Found",
-    "urlName": "page-not-found",
+    "title": "New page",
+    "urlName": "new-page-AJbec",
     "parent": "",
     "tags": "",
     "description": "",
@@ -18,7 +18,7 @@
       }
     },
     "disabledProfileData": [],
-    "urlPath": "content/"
+    "urlPath": "content/test"
   }
 
   window.profileData = {}
@@ -33,6 +33,6 @@
 </div>
 <div id="nonspoiler">
   <div id="nonspoiler-overview" class="page-tab">
-    The page "<code>[[pageName]]</code>" does not exists.
+    The page "<code>new-page</code>" is not saved yet!
   </div>
 </div>
