--- a/src/assets/templates/trash/story-a.html
+++ b/src/assets/templates/trash/story-a.html
@@ -1,8 +1,8 @@
 <!-- File Data -->
 <script>
   window.pageData = {
-    "title": "Page not Found",
-    "urlName": "page-not-found",
+    "title": "Story a",
+    "urlName": "story-a",
     "parent": "",
     "tags": "",
     "description": "",
@@ -33,6 +33,6 @@
 </div>
 <div id="nonspoiler">
   <div id="nonspoiler-overview" class="page-tab">
-    The page "<code>[[pageName]]</code>" does not exists.
+    TEST YEST TEST
   </div>
 </div>
