changed to browser url redirect rather than reloading the page. also fixed btn tertiary hover issue

--- a/src/assets/templates/.eternal/css/style.css
+++ b/src/assets/templates/.eternal/css/style.css
@@ -8292,7 +8292,7 @@ div.jsoneditor-statusbar > .jsoneditor-size-info {
 }
 
 .btn--active:hover {
-  color: white;
+  color: white !important;
 }
 
 .btn--active2 {
