--- a/src/assets/templates/assets/templates/character-template.html
+++ b/src/assets/templates/assets/templates/character-template.html
@@ -23,18 +23,17 @@
 
   window.profileData = {
     "nonspoiler-overview": {
-      "Title": "Ethan Morales",
+      "Title": "Character Name",
       "Image": {
-        "Original Art": "assets/images/Ethan-Morales.png",
-        "Uniform": "assets/images/Ethan Morales.png"
+        "Portrait": "assets/images/default_profile.png"
       },
       "Content": {
         "Desc": {
-          "Full Name": "Ethan R. Morales",
+          "Full Name": "Character Name V. Full",
           "Alias": [
-            "Tantan",
-            "Lunatic",
-            "Crazy Sociopath"
+            "Strong Character",
+            "Human Chaacter",
+            "Char 2"
           ]
         },
         "Biography": {
@@ -50,13 +49,12 @@
           "Blood Type": ""
         },
         "Power": {
-          "Rank": "Primera",
+          "Rank": "1st Awakener",
           "Ability": [
-            "Candlefire",
-            "Creation"
+            "Ability A"
           ],
           "Passive Ability": [
-            "Fire Resistance"
+            "Ability B"
           ]
         },
         "Status": {
@@ -71,58 +69,47 @@
       }
     },
     "spoiler-overview": {
-      "Title": "Ethan Morales",
+      "Title": "Character Name",
       "Image": {
-        "Original Art": "assets/images/Ethan-Morales.png",
-        "Uniform": "assets/images/Ethan Morales.png",
-        "Hero Suit": "assets/images/Eltia Axolin.png"
+        "Portrait": "assets/images/default_profile.png"
       },
       "Content": {
         "Desc": {
-          "Full Name": "Ethan R. Morales",
+          "Full Name": "Character Name V. Full",
           "Alias": [
-            "Tantan",
-            "Lunatic",
-            "Crazy Sociopath",
-            "The Unchained Predator"
+            "Strong Character",
+            "Human Chaacter",
+            "Char 2"
           ]
         },
         "Biography": {
           "Race": "Human",
-          "Birthday": "15 June",
-          "Age": "15",
-          "Gender": "Male",
+          "Birthday": "",
+          "Age": "",
+          "Gender": "",
           "Height": "168 cm",
           "Weight": "58 kg",
-          "Hair Color": "Orange-Red",
-          "Skin Color": "Light-Beige",
-          "Blood Type": "AB"
+          "Hair Color": "",
+          "Eye Color": "",
+          "Skin Color": "",
+          "Blood Type": ""
         },
         "Power": {
-          "Rank": "6th Awakener",
-          "Active": [
-            "Candlefire",
-            "Pyrokinesis",
-            "Thermal Manipulation",
-            "Kinetic Manipulation",
-            "Molecular Binding",
-            "Atomic Manipulation"
+          "Rank": "1st Awakener",
+          "Ability": [
+            "Ability A"
           ],
-          "Passive": [
-            "Fire Immunity",
-            "Tough Skin",
-            "Atomic Sense",
-            "Enhanced Brain"
+          "Passive Ability": [
+            "Ability B"
           ]
         },
         "Status": {
           "Status": "Alive",
           "Birthplace": "Desteria, Shanty Town",
           "Family": [
-            "Madelyn Morales (Mother)",
-            "Nathaniel Morales (Father)",
-            "Isaac Morales (Little Brother)",
-            "Graniel Morales (Grandfather)"
+            " (Mother)",
+            " (Father)",
+            " (Little Brother)"
           ]
         }
       }
@@ -134,106 +121,77 @@
 
 <div id="spoiler">
   <div id="spoiler-overview" class="page-tab">
-    Ethan Morales is the Main Protagonist of the novel "The Birth of a Hero" and the the central point of the story. He is a student studying in U.H.A. and is part of E-Class.
-
-    He and his family are Desterian Immigrants who migrated to Arlika in order to seek a better life. The first six years of his life was spent in Desteria, witnessing the cruelty of drug cartels and the ghetto, caused a life-long influenced on Ethan's psyche that even he didn't knew he had.
-
-    As a child, he always wanted to become a hero because of the stories that his mother told him. She taught in him the virtues of a Hero and what it means to be good. As a result, he grew up wanting to be one. He trained his abilities for most of his days and even going so far as becoming a vigilante with his best friend Kevin and Vanessa, albeit only fighting petty crimes like thievery, mugging, and bullying. But his motivation later became sinister when an accident led to him having to choose which one of his friend he had to sacrifice, followed by the destruction of the town they were in at the time, permanently scarring Ethan's mind and turning him into a sociopath.
+    Description
 
     [[toc]]
 
     # Appearance
-    Ethan is a Desterian Teenager. Like most Desterian, he has dark hair and light beige skin. His eyes are orange-red, inherited from his mother and he has a tall build, inherited from his dad. His eyebrows are thin like his mother and his nose is straight from his father's. His hair is kept slightly long, giving him a pair of bangs on his forehead.
-
-    While Ethan is always seen wearing glasses, he does not have a bad eyesight. Rather, he wears his glasses as a convenient computer and to help enhance his ability. He does not like contact lens since he's too lazy to wear those.
-
-    When not in school, he always wears a dark, baggy sweater and a pair of dark pants. When he goes outside, he wears a dark track suit with orange-red stripes.
-
+    Description
+    
     # Personality
-    Ethan was always encouraged by his father to be assertive and to take what is rightfully his. As a result, he grew up having a confident and proud personality. While initially peaceful, his bullying encounter with the then child Kevin caused Ethan to wake up to his aggressive tendencies. After years of battling and beating each other, Ethan ended up having a fearless, calculating, and aggressive personality, very much like that of Kevin.
-
-    He grew up having a bright, cheerful, and smart personality. Because Ethan grew up in Desteria during the first six years of his life, his morality ended up getting influenced, causing him to have rebellious and cold tendencies. However, his parents has taught him well enough that Ethan grew up with a kind personality, always smiling and helping those in need.
-
-    After the events with the Crawler, Ethan changed and became sociopathic. He became cold, cunning, hateful, and vengeful. The event broke him, causing him to lose a great deal of his empathy. After much consolation and love from his parents, a part of the Original Ethan returned back, however he was permanently changed. He changed into a mature and unsociable person, barely smiling and always living in his own world. It was only after living with [[E-Class]] did Ethan grew and retained his original personality back.
-
-    Inspired by the Elucid King, Ethan started studying Strange Social Laws and Scheming books, causing him to turn into a rather deceptive and highly opportunistic person.
+    Description
 
     # Motivation
-    Ethan is a good person at heart. He was raised by his parents to be kind, courageous, and heroic. While his parents never told him to become a hero, he saw through the lines of what they subconsciously wanted him to become.
-
-    But his motivation changed into a desire to murder the Villain that tortured him and stole the powers of Vanessa. He enrolled into UHA in order to train himself. He aimed to achieved the following.
-    * Complete Mastery over Creation
-    * Study the Abilities of his classmates and copy useful ones
-    * Befriend anyone with interesting and useful research, i.e. the biology, inventor, and research club.
-    * Obtain the extremely rare Ebony ingot
-    * Test his guns and custom ammos on anyone
+    Description
 
     # History
+    Description
 
     # Abilities
-    Because Ethan is a Ranker, he awakened many different forms of his ability.
+    Description
 
     ## Active
-    * **Candlefire** - The ability to create a small fire in one's palm. Currently, has grown so powerful it became black and simply utterly annihilates anything it touches, even the user.
-    * **Pyrokinesis** - The ability to manipulate flames
-    * **Thermal Manipulation** - The ability to manipulate temperature.
-    * **Kinetic Manipulation** - The ability to manipulate the kinetic energy of atoms allowing the user to use a telekinesis like power.
-    * **Molecular Binding** - The ability to manipulate the energy between molecules and bind them together.
-    * **Creation (Faux)** - The ability to rearrange atoms into molecules, which allows the creation of any physical object. While Ethan endorse he suddenly awakened to Creation, its actually just a technique of his under Atomic Manipulation
-    * **Atomic Manipulation** - The Ability to manipulate Matter at the atomic level. The user can control atoms, the building blocks of matter. The user can manipulate matter on an atomic level, and the energy associated with it. They can manipulate atomic structures of matter to achieve a variety of
+    Text
 
     ## Passive
+    Text
+
     # Equipment
+    Description
+
     # Trivia
+    Description
+
     # Gallery
-  </div>
-  <div id="spoiler-relationships" class="page-tab">
-    # Relationships
-    * [[Giselle Iridao]] - Ethan forms a tight sibling relationship with Giselle. They found each other's mind quite comfortable, specially Giselle who always find it hard to understand when people suffer. Seeing as how Ethan is okay with things she finds indifference with, they were able to easily bond and find a common ground.
+    Description
 
-    * [[Mayumi Severino]] - Ethan also formed a sibling-like relationship with Mayumi, but more of a best-friend type of nature.
-
-    * [[Eltia Axolin]]
   </div>
 </div>
 <div id="nonspoiler">
   <div id="nonspoiler-overview" class="page-tab">
-    Ethan Morales is the Main Protagonist of the novel [[tboah]] and the the central hero of the story. He is a student studying in U.H.A. and is part of E-Class. He has the power to create physical objects using his body fats which he apparently "Awakened" randomly in the past.
-
-    * [[Giselle Iridao]] - Ethan forms a tight sibling relationship with Giselle. They found each other's mind quite comfortable, specially Giselle who always find it hard to understand when people suffer. Seeing as how Ethan is okay with things she finds indifference with, they were able to easily bond and find a common ground.
-
-    * [[Mayumi Severino]] - Ethan also formed a sibling-like relationship with Mayumi, but more of a best-friend type of nature.
-
-    * [[Eltia Axolin]]
+    Description
 
     [[toc]]
 
     # Appearance
-    Ethan is a Desterian Teenager. Like most Desterian, he has dark hair and light beige skin. His eyes are orange-red, inherited from his mother and he has a tall build, inherited from his dad. His eyebrows are thin like his mother and his nose is straight from his father's. His hair is kept slightly long, giving him a pair of bangs on his forehead.
-
-    While Ethan is always seen wearing glasses, he does not have a bad eyesight. Rather, he wears his glasses as a convenient computer and to help enhance his ability. He does not like contact lens since he's too lazy to wear those.
-
-    When not in school, he always wears a dark, baggy sweater and a pair of dark pants. When he goes outside, he wears a dark track suit with orange-red stripes.
-
+    Description
+    
     # Personality
-    Ethan first appeared to have a stoic and quiet personality.
-    However, his true personality eventually appears, revealing a chaotic and mischievous person. He does not like rules and laws, preferring to do as he pleases. Although he do respect the law, up until its convenient to him, that is.
+    Description
 
-    Ethan's perspective on what is 'Right' is very skewed from the norm, preferring to achieve pragmatic results regardless of the means. Sometimes, things that are really dangerous and blatantly wrong to the average person is seen by Ethan as something 'obvious'. This caused his friends and classmates to view him as an unhinged sociopath.
-    However, this kind of Morality is not unique to Ethan as Kevin sometimes displays them, albeit to a lesser degree, clearly influenced by the two of them grewing up pratically together.
+    # Motivation
+    Description
 
-    # Ability
-    ## Candlefire
-    The ability to create a small candle fire in his palm
+    # History
+    Description
 
-    ## Creation
-    The ability to turn body fats into a any physical objects. The following is the current limits.
-    * The user's understanding of molecular and atomic structure.
-    * Amount of fats in his body
-    * Brain Processing Power
-    * Size of Creation no more than his body's surface area
+    # Abilities
+    Description
 
-    ## Fire Resistance
-    Ability to resist intense heat. Inherited from his mother.
+    ## Active
+    Text
+
+    ## Passive
+    Text
+
+    # Equipment
+    Description
+
+    # Trivia
+    Description
+
+    # Gallery
+    Description
+
   </div>
 </div>
