--- a/src/assets/templates/index.html
+++ b/src/assets/templates/index.html
@@ -34,7 +34,8 @@
 
       <!-- Editor -->
       <div class="row editor-div" v-if="isElectronCheck">
-        <editor :passed-editor-data="editorData" @save-content="saveContent"
+        <editor :passed-editor-data="editorData" :urlpaths="urlpaths" :parents-list="parentlists"
+          @save-content="saveContent"
           @delete-page="deletePage" @update-project="updateProject" 
           @new-page="newPage" @history-previous='historyPrevious'/>
       </div>
