fixed minor css btn color issue

--- a/src/assets/templates/.eternal/css/style.css
+++ b/src/assets/templates/.eternal/css/style.css
@@ -8230,6 +8230,7 @@ div.jsoneditor-statusbar > .jsoneditor-size-info {
 }
 
 .btn--link {
+  margin: 0em;
   color: #0d6efd;
   background-color: transparent;
 }
