finished making template system

--- a/src/assets/templates/.eternal/css/_utility.scss
+++ b/src/assets/templates/.eternal/css/_utility.scss
@@ -38,6 +38,10 @@
   color: $font-color-light;
 }
 
+.font--gray {
+  color: darken($font-color-light, 10);
+}
+
 // weight
 .font--w-bold {
   font-weight: 400;
