--- a/src/assets/templates/.eternal/css/style.scss
+++ b/src/assets/templates/.eternal/css/style.scss
@@ -40,8 +40,9 @@ $toc-bg: $color-light2;
 @import './utility';
 @import './default';
 @import './input';
+@import './dropdown';
 
-// Imports Components
+// Imports Components    
 @import './components/card';
 @import './components/header';
 @import './components/toggle';
