--- a/src/template/content/home.html
+++ b/src/template/content/home.html
@@ -39,6 +39,8 @@
 
     A Wiki Created for the stories.
 
+    > lol lol lol
+
     [[ethan morales]]
 
     * **Eldrada** - The most powerful among Eldras.
