--- a/src/template/content/story/ethan-morales.html
+++ b/src/template/content/story/ethan-morales.html
@@ -76,8 +76,8 @@
     "spoiler-overview": {
       "Title": "Ethan Morales",
       "Image": {
-        "Original Art": "assets/images/Ethan-Morales.png",
         "Uniform": "assets/images/Ethan Morales.png",
+        "Original Art": "assets/images/Ethan-Morales.png",
         "Hero Suit": "assets/images/Eltia Axolin.png"
       },
       "Content": {
@@ -137,6 +137,9 @@
 
 <div id="spoiler">
   <div id="spoiler-overview" class="page-tab">
+    > Never let your morality prevent you from doing what is Right. - Ethan Morales
+    
+    
     Ethan Morales is the Main Protagonist of the novel "The Birth of a Hero" and the the central point of the story. He is a student studying in U.H.A. and is part of E-Class.
 
     He and his family are Desterian Immigrants who migrated to Arlika in order to seek a better life. The first six years of his life was spent in Desteria, witnessing the cruelty of drug cartels and the ghetto, caused a life-long influenced on Ethan's psyche that even he didn't knew he had.
