--- a/src/template/.eternal/css/style.css
+++ b/src/template/.eternal/css/style.css
@@ -8548,6 +8548,23 @@ hr {
   outline: 1px solid #0d6efd;
 }
 
+.quote {
+  width: 100%;
+  border-left: 5px solid #E7E7E2;
+  background-color: #f6f6f6;
+  color: #2b2b2b;
+  font-style: italic;
+  font-family: Georgia, 'Times New Roman', Times, serif;
+  font-size: 1.1em;
+  padding: 0.8em 0.5em 0.5em 0.8em;
+  margin: 0.5em 0.5em 0.5em 0em;
+  line-height: 1.4em;
+}
+
+.quote-marks {
+  font-size: 1.4em;
+}
+
 .card {
   width: 90%;
   height: auto;
@@ -8775,7 +8792,7 @@ hr {
   padding: 0.4em;
   padding-left: 0.8em;
   padding-right: 0.8em;
-  background-color: #f3f3f3;
+  background-color: #f6f6f6;
   color: #212121;
   text-decoration: none;
 }
@@ -8874,7 +8891,7 @@ hr {
 }
 
 .page-breadcrumbs {
-  background-color: #f3f3f3;
+  background-color: #f6f6f6;
   color: #2b2b2b;
   border-radius: 0.3em;
   margin-top: 0.5em;
@@ -8927,7 +8944,7 @@ hr {
 
 /* box css */
 .toc {
-  background-color: #f3f3f3;
+  background-color: #f6f6f6;
   width: -webkit-fit-content;
   width: -moz-fit-content;
   width: fit-content;
@@ -9001,7 +9018,7 @@ hr {
 }
 
 .profile-box--visual {
-  background-color: #f3f3f3;
+  background-color: #f6f6f6;
 }
 
 .profile-box--visual table tbody {
