--- a/src/template/.eternal/css/style.scss
+++ b/src/template/.eternal/css/style.scss
@@ -4,14 +4,15 @@ $card-bg: white;
 $color-primary: #0d6efd;
 $color-error: #e82b2b;
 $color-light: #E7E7E2;
-$color-light2: darken(#F7F7F7, 1.7);
+$color-light2: #f6f6f6;
+
 $font-color-primary: $color-primary;
 $font-color-light: #fff;
 $font-color-dark: #2b2b2b;
 $font-family: 'Rubik Regular';
 $outline: lighten($color-primary, 30);
 
-// Button Variables
+// Button Variables    
 $btn-primary: $color-primary;
 $btn-primary--darken: 15%;
 $btn-primary--font: $font-color-light;
@@ -23,7 +24,7 @@ $header-font: $font-family;
 $breadcrumbs-bg: $color-light2;
 $breadcrumbs-font-color: $font-color-dark;
 
-// TOC             
+// TOC         
 $toc-bg: $color-light2;
 
 // ======== VARIABLE AREA ======== (DO NOT REMOVE THIS COMMENT)
@@ -41,6 +42,7 @@ $toc-bg: $color-light2;
 @import './default';
 @import './input';
 @import './dropdown';
+@import './quotation';
 
 // Imports Components    
 @import './components/card';
