added basic warning alert

--- a/src/template/index.html
+++ b/src/template/index.html
@@ -12,7 +12,7 @@
   <!-- Scripts -->
   <script rel="modulepreload" src=".eternal/js/vue/vue.global.js"></script>
   <script rel="modulepreload" src=".eternal/js/component.js"></script>
-  <script rel="modulepreload" src=".eternal/js/main.js"></script>
+  <script rel="modulepreload" src=".eternal/js/render.js"></script>
 
   <!-- Editor Scripts -->
   <script rel="modulepreload" src=".eternal/js/editor/codeflask.min.js"></script>
