--- a/src/template/index.html
+++ b/src/template/index.html
@@ -28,17 +28,15 @@
 
       <!-- Page Header -->
       <div id="header" class="row">
-        <header-card :title="projectTitle" :subtitle="projectSubtitle" :btn-list="headerNavBtn" @read-page="gotoPage"/>
+        <header-card :title="projectTitle" :subtitle="projectSubtitle" :btn-list="headerNavBtn" @read-page="gotoPage" />
       </div>
 
       <!-- v-if="isElectronCheck" -->
 
       <!-- Editor -->
       <div class="row editor-div" v-if="isElectron">
-        <editor :passed-editor-data="editorData" :urlpaths="urlpaths" :parents-list="parentlists" :template-list="templateList"
-          @save-content="saveContent" :is-new-page="isNewPage" :dir="dir"
-          @delete-page="deletePage" @update-project="updateProject" @set-page-as-template="setPageAsTemplate" 
-          @new-page="newPage" @history-previous='historyPrevious'/>
+        <editor :passed-editor-data="editorData" :urlpaths="urlpaths" :parents-list="parentlists" :template-list="templateList" @save-content="saveContent" :is-new-page="isNewPage" :dir="dir" @delete-page="deletePageConfirm" @update-project="updateProject" @set-page-as-template="setPageAsTemplate"
+          @new-page="newPage" @history-previous='historyPrevious' />
       </div>
 
       <!-- Page Card -->
