--- a/src/template/index.html
+++ b/src/template/index.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -15,10 +16,13 @@
   <script rel="modulepreload" src=".eternal/js/render.js"></script>
 
   <!-- Editor Scripts -->
-  <script rel="modulepreload" src=".eternal/js/editor/codeflask.min.js"></script>
+  <script rel="modulepreload" src=".eternal/js/editor/notifications.js"></script>
   <script rel="modulepreload" src=".eternal/js/editor/jsoneditor.js"></script>
   <script rel="modulepreload" src=".eternal/js/editor/easymde.min.js"></script>
 
+  <staticcontent>
+    <clientcache cachecontrolmode="UseMaxAge" cachecontrolmaxage="365.00:00:00" />
+  </staticcontent>
 </head>
 
 <body>
